--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "streamlit>=1.28.0",
     "opencv-python>=4.8.0",
     "pillow>=10.0.0",
+    "tensorflow>=2.18.1",
 ]
 
 [project.optional-dependencies]
