--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "streamlit>=1.28.0",
     "opencv-python>=4.8.0",
     "pillow>=10.0.0",
+    "flask>=3.0.0",
+    "flask-socketio>=5.3.0",
+    "python-socketio>=5.11.0",
 ]
 
 [project.optional-dependencies]
