--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "flask>=3.0.0",
     "flask-socketio>=5.3.0",
     "python-socketio>=5.11.0",
+    "flask>=3.1.2",
+    "flask-socketio>=5.5.1",
+    "python-socketio>=5.14.3"
 ]
 
 [project.optional-dependencies]
